feat: task5, add devise, test sign_in: green

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,5 +9,9 @@ html
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
 
   body
+    p class="notice" 
+      = notice 
+    p class="alert" 
+      = alert 
     p= flash[:notice] || flash[:alert]
     = yield
