--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,1 +1,12 @@
-li= answer.body
+span id="answer-body-#{answer.id}"
+  = answer.body
+
+- if user_signed_in?
+  p= link_to 'Edit','', class: 'edit-answer-link', data: { answer_id: answer.id } 
+
+  = form_with model: answer, class: 'hidden', html: { id: "edit-answer-#{answer.id}" }, local: false do |f|
+    = f.label :body, 'Your answer'
+    = f.text_area :body
+    = f.submit 'Save'
+ 
+ 
