--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -1,15 +1,15 @@
 = form_with model: question, local: false do |form|
-  =form.label :title
+  =form.label :title, 'Title'
   =form.text_field :title
-  =form.label :body 
+  =form.label :body, 'Body question' 
   =form.text_area :body
-  =form.submit  
+  =form.submit 'Save'  
 
 
 = question.title
 
 = link_to 'View', question_path(question)
-- if @user
-  = link_to 'Edit', edit_question_path(question)
+- if user_signed_in?
+  = link_to 'Edit', '', class: 'edit-question-link', data: { question_id: question.id }  
   = link_to 'Delete', question_path(question), method: 'delete', data: { confirm: 'Are you sure?' }
 br
