--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -1,15 +1,17 @@
-= form_with model: question, local: false do |form|
+= form_with model: question, class: 'hidden', html: { id: "edit-question-#{question.id}" }, local: false do |form|
   =form.label :title, 'Title'
   =form.text_field :title
   =form.label :body, 'Body question' 
   =form.text_area :body
   =form.submit 'Save'  
 
+span id="question-title-#{question.id}"
+  = question.title
 
-= question.title
+nav class='nav'
+  = link_to 'View', question_path(question), class: 'nav-link'
+  - if user_signed_in?
+    
+      = link_to 'Edit', '', class: 'edit-question-link nav-link', data: { question_id: question.id }  
+      = link_to "Delete",  question_path(question), class: 'nav-link', method: 'delete', data: { confirm: 'Are you sure?' }
 
-= link_to 'View', question_path(question)
-- if user_signed_in?
-  = link_to 'Edit', '', class: 'edit-question-link', data: { question_id: question.id }  
-  = link_to 'Delete', question_path(question), method: 'delete', data: { confirm: 'Are you sure?' }
-br
