--- a/app/views/answers/update.js.erb
+++ b/app/views/answers/update.js.erb
@@ -1,6 +1,4 @@
-$('.answer-errors').html("<%= render 'shared/errors', resource: @answer %> ");
+$("#answer-errors-<%= @answer.id %>").html("<%= j render 'shared/errors', resource: @answer %> ")
 <% if !@answer.errors.present? %>
-  $("#edit-answer-<%= @answer.id %>").children('textarea').html('');
-  $("#edit-answer-<%= @answer.id %>").addClass('hidden');
-  $("#answer-body-<%= @answer.id %>").html('<%= j render @answer %>');
+  $("#answer-block-<%= @answer.id %>").html('<%= j render @answer %>');
 <% end %>
