--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -1,17 +1,19 @@
-= form_with model: question, class: 'hidden', html: { id: "edit-question-#{question.id}" }, local: false do |form|
-  =form.label :title, 'Title'
-  =form.text_field :title
-  =form.label :body, 'Body question' 
-  =form.text_area :body
-  =form.submit 'Save'  
+span id="question-block-#{question.id}"
+  span id="question-errors-#{question.id}"
+    = render 'shared/errors', resource: @question
 
-span id="question-title-#{question.id}"
-  = question.title
+  = form_with model: question, class: 'hidden', html: { id: "edit-question-#{question.id}" }, local: false do |form|
+    =form.label :title, 'Title'
+    =form.text_field :title
+    =form.label :body, 'Body question' 
+    =form.text_area :body
+    =form.submit 'Save'  
 
-nav class='nav'
-  = link_to 'View', question_path(question), class: 'nav-link'
-  - if user_signed_in?
-    
+  span id="question-title-#{question.id}"
+    = question.title
+
+  nav class='nav'
+    = link_to 'View', question_path(question), class: 'nav-link'
+    - if user_signed_in? && @user.author?(question.author_id)
       = link_to 'Edit', '', class: 'edit-question-link nav-link', data: { question_id: question.id }  
-      = link_to "Delete",  question_path(question), class: 'nav-link', method: 'delete', data: { confirm: 'Are you sure?' }
-
+      = link_to "Delete", question_path(question), class: 'delete-question-link nav-link', method: 'delete', data: { question_id: question.id }
