--- a/app/views/shared/_menu.html.slim
+++ b/app/views/shared/_menu.html.slim
@@ -5,3 +5,4 @@ div class='menu-box'
         div class="navbar-nav"
           = link_to  "Entry", new_user_session_path, class: 'nav-link'
           = link_to  "Log out", destroy_user_session_path, class: 'nav-link', method: :delete
+          = link_to  "List of Questions", questions_path, class: 'nav-link'
