--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -5,9 +5,9 @@ ul
 .answer-errors
   = render 'shared/errors', resource: @answer
 .container-xl.answers.bg-light
-  = render partial: '/answers/answer', collection: @question.answers
+  = render partial: '/answers/answer', collection: @answers
 
-.container-xl.bg-light
+.container-xl.bg-secondary
   = form_with model: [@question, @answer], class: 'new-answer', local: false do |form|
     = form.label :body, 'Your answer' 
     = form.text_area :body, rows: 6, cols: 40
