--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,15 +1,19 @@
 span id="answer-block-#{answer.id}"
   span id="answer-errors-#{answer.id}"
-  = answer.body
-
+  -if answer.selected
+    div class="bg-success" 
+      br= "Best answer"
+      = answer.body 
+  -else
+    = answer.body
   = form_with model: answer, class: 'hidden', html: { id: "edit-answer-#{answer.id}" }, local: false do |f|
     = f.label :body, 'Your answer'
     = f.text_area :body
     = f.submit 'Save'
 
   nav class='nav'
-    - if user_signed_in? && current_user.author?(answer.author_id)
+    - if user_signed_in? && current_user.author?(answer)
         = link_to 'Edit','', class: 'edit-answer-link nav-link', data: { answer_id: answer.id } 
         = link_to "Delete", answer_path(answer), class: 'delete-answer-link nav-link', method: 'delete', data: { answer_id: answer.id }
-    - if user_signed_in? && current_user.author?(@question.author_id) && !answer.is_best?
+    - if user_signed_in? && current_user.author?(@question) && !answer.is_best?
         = link_to 'Mark as the best', select_answer_path(answer), class: 'select-answer-link nav-link', method: 'patch', data: { answer_id: answer.id } 
