--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,6 +1,7 @@
 p= @question.title
 p= @question.body
-ul
+- if@question.file.attached?
+  p= link_to @question.file.filename.to_s, url_for(@question.file)
 
 .answer-errors
   = render 'shared/errors', resource: @answer
