--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,7 +1,8 @@
 p= @question.title
 p= @question.body
-- if@question.file.attached?
-  p= link_to @question.file.filename.to_s, url_for(@question.file)
+- if@question.files.attached?
+  - @question.files.each do |file|
+    p= link_to file.filename.to_s, url_for(file)
 
 .answer-errors
   = render 'shared/errors', resource: @answer
