--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,8 +1,8 @@
 p= @question.title
 p= @question.body
-- if@question.files.attached?
+- if @question.files.attached?
   - @question.files.each do |file|
-    p= link_to file.filename.to_s, url_for(file)
+    p= link_to file.filename.to_s, url_for(file), rel: 'nofollow noopener', target: '_blank'
 
 .answer-errors
   = render 'shared/errors', resource: @answer
@@ -12,5 +12,9 @@ p= @question.body
 .container-xl.bg-secondary
   = form_with model: [@question, @answer], class: 'new-answer', local: false do |form|
     = form.label :body, 'Your answer' 
-    = form.text_area :body, rows: 6, cols: 40
+    = form.text_area :body, rows: 6, cols: 80
+    
+    = form.label :files
+    = form.file_field :files, multiple: true
+
     = form.submit 'Answer'
