--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -15,8 +15,12 @@ span id="answer-block-#{answer.id}"
         p= link_to file.filename.to_s, url_for(file), rel: 'nofollow noopener', target: '_blank'
 
   = form_with model: answer, class: 'hidden', html: { id: "edit-answer-#{answer.id}" }, local: false do |f|
-    = f.label :body, 'Your answer'
-    = f.text_area :body
+    div
+      = f.label :body, 'Your answer'
+      = f.text_area :body
+    div 
+      = f.label :files
+      = f.file_field :files, multiple: true
     = f.submit 'Save'
 
   nav class='nav'
