--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -2,7 +2,8 @@ p= @question.title
 p= @question.body
 - if @question.files.attached?
   - @question.files.each do |file|
-    p= link_to file.filename.to_s, url_for(file), rel: 'nofollow noopener', target: '_blank'
+    span= link_to file.filename.to_s, url_for(file), rel: 'nofollow noopener', target: '_blank'
+    br= link_to  "Delete file", root_path
 
 .answer-errors
   = render 'shared/errors', resource: @answer
@@ -17,4 +18,4 @@ p= @question.body
     = form.label :files
     = form.file_field :files, multiple: true
 
-    = form.submit 'Answer'
+    p= form.submit 'Answer'
