--- a/app/views/answers/update.js.erb
+++ b/app/views/answers/update.js.erb
@@ -1,3 +1,4 @@
+$('.flash').html('')
 $("#answer-errors-<%= @answer.id %>").html("<%= j render 'shared/errors', resource: @answer %> ")
 <% if !@answer.errors.present? %>
   $("#answer-block-<%= @answer.id %>").html('<%= j render @answer %>');
