--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -1,7 +1,7 @@
 span id="question-block-#{question.id}"
   span id="question-errors-#{question.id}"
     = render 'shared/errors', resource: @question
-  div.form-edit.bg-warning.p-1
+  div.form-edit.bg-warning style="--bs-bg-opacity: .25"
     = form_with model: question, class: 'hidden', html: { id: "edit-question-#{question.id}" }, local: false do |form|
       div.input-group.mb-3
         =form.label :title, 'Title', class: 'form-label'
@@ -21,4 +21,4 @@ span id="question-block-#{question.id}"
     = link_to 'View', question_path(question), class: 'nav-link'
     - if user_signed_in? && current_user.author?(question)
       = link_to 'Edit', '', class: 'edit-question-link nav-link', data: { question_id: question.id }  
-      = link_to "Delete", question_path(question), class: 'delete-question-link nav-link', method: 'delete', data: { question_id: question.id }
+      = link_to "Delete", question, method: 'delete', remote: true, class: 'delete-question-link nav-link', data: { question_id: question.id }
