--- a/app/views/questions/destroy.js.erb
+++ b/app/views/questions/destroy.js.erb
@@ -1,3 +1,5 @@
 <% if !@question.errors.present? %>
   $("#question-block-<%= @question.id %>").remove()
+  $(".flash").html("")
+  $(".flash").html("<div class='alert alert-info' role='alert'>Question was delete successfully</div>")
 <% end %>
