feat: task7, add attachments controller to anattach file, tests - green

--- a/app/views/attachments/unattach.js.erb
+++ b/app/views/attachments/unattach.js.erb
@@ -1,4 +1,4 @@
-<% if !@question.errors.present? %>
+<% if !@file.errors.present? %>
   $("#file-block-<%= @file.id %>").remove()
   $(".flash").html("")
   $(".flash").html("<div class='alert alert-info' role='alert'>File was unattach successfully</div>")
