--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -3,4 +3,6 @@ $('.answer-errors').html("<%= j render 'shared/errors', resource: @answer %> ")
 <% if @answer.persisted? %>
   $('.answers').append('<%= j render @answer %>')
   $('.new-answer #answer_body').val('')
+  $(".flash").html("<div class='alert alert-info' role='alert'>Answer was created successfully</div>")
+  $('.answer-files').prop('value', null)
 <% end %>
