--- a/app/views/answers/destroy.js.erb
+++ b/app/views/answers/destroy.js.erb
@@ -1,3 +1,5 @@
 <% if !@answer.errors.present? %>
   $("#answer-block-<%= @answer.id %>").remove()
+  $(".flash").html("")
+  $(".flash").html("<div class='alert alert-info' role='alert'>Answer was deleted successfully</div>")
 <% end %>
