feat: task8, add attachment of links to answer & question during creating with cocoon

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,26 +1,16 @@
+-@inner = answer 
 span id="answer-block-#{answer.id}"
   span id="answer-errors-#{answer.id}"
   -if answer.selected
-    div class="bg-success" style="--bs-bg-opacity: .25"
+    div.bg-success style="--bs-bg-opacity: .25"
       br= "Best answer"
-      b= answer.body
-      - if answer.files.attached? 
-        ul
-          - answer.files.each do |file|
-            div.hstack.gap-3 id="file-block-#{ file.id }"
-              li= link_to file.filename.to_s, url_for(file), rel: 'nofollow noopener', target: '_blank'
-              -if current_user.author?(answer)
-                =link_to  "unattach", attachment_path(id: file, holder: answer), id: "a-file-#{ file.id }", data: { confirm: "Are you Shure?" }, method: :delete, remote: true 
+      =render 'answers/inner'
+      =render 'answers/nav'
   -else
-    = answer.body
-    - if answer.files.attached? 
-      ul
-        - answer.files.each do |file|
-          div.hstack.gap-3 id="file-block-#{ file.id }"
-            li= link_to file.filename.to_s, url_for(file), rel: 'nofollow noopener', target: '_blank'
-            -if current_user.author?(answer)
-              =link_to  "unattach", attachment_path(id: file, holder: answer), id: "a-file-#{ file.id }", data: { confirm: "Are you Shure?" }, method: :delete, method: :delete, remote: true 
-  
+    div.mt-4
+      =render 'answers/inner'  
+      =render 'answers/nav'
+
   .container-xl.bg-secondary style="--bs-bg-opacity: .15"
     = form_with model: answer, class: 'hidden pb-2 mb-4', html: { id: "edit-answer-#{answer.id}" }, local: false do |f|
       div
@@ -30,10 +20,3 @@ span id="answer-block-#{answer.id}"
         = f.label :files, class: "form-label"
         p= f.file_field :files, multiple: true, class: "form-control form-control-sm m-2"
       p= f.submit 'Save', class: 'btn btn-light'
-
-  nav class='nav'
-    - if user_signed_in? && current_user.author?(answer)
-        = link_to 'Edit','', class: 'edit-answer-link nav-link', data: { answer_id: answer.id } 
-        = link_to "Delete", answer, method: 'delete', remote: true, class: 'delete-answer-link nav-link', data: { answer_id: answer.id, confirm: "Are you shure?" }
-    - if user_signed_in? && current_user.author?(@question) && !answer.is_best?
-        = link_to 'Mark as the best', select_answer_path(answer), class: 'select-answer-link nav-link', method: 'patch', data: { answer_id: answer.id } 
