--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,7 +13,7 @@ html
     div.container
       = render 'shared/menu'
     .conteniar   
-    .conteniar-lg.col-md-8.mx-auto
+    .conteniar-lg.col-md-8.mx-auto.main-body
       .flash-alert
         = show_flash(:alert) 
         = show_flash(:danger)
