--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -1,5 +1,6 @@
 div class="new-form"
-  = render "shared/errors", resource: @question
+  p.question-errors
+    = render 'shared/errors', resource: @question
   div class="mb-5"
     =form_with model: @question, local: true do |f|
       p class="form-label"
