--- a/app/views/shared/_menu.html.slim
+++ b/app/views/shared/_menu.html.slim
@@ -6,3 +6,4 @@ div class='menu-box'
           = link_to  "Entry", new_user_session_path, class: 'nav-link'
           = link_to  "Log out", destroy_user_session_path, class: 'nav-link', method: :delete
           = link_to  "List of Questions", questions_path, class: 'nav-link'
+          = link_to  "List of Meeds", meeds_path, class: 'nav-link'
