--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -10,8 +10,10 @@ span id="answer-block-#{answer.id}"
     -else
       .mt-4.conteniar-sm.col-md-10.mx-auto  
         =render 'shared/inner'
-    .conteniar-sm.col-md-2.mx-auto  
-      =render partial: 'shared/vote', locals: { voteable: answer}
+    .conteniar-sm.col-md-2.mx-auto 
+      = render partial: 'shared/rating', locals: { voteable: answer} 
+      -if !current_user.author?(answer) 
+        =render partial: 'shared/vote', locals: { voteable: answer}
   .conteniar-sm.col-md-12.mx-auto    
     =render 'answers/nav'
 
