fix: task9, correct rating

--- a/app/views/shared/_rating.html.slim
+++ b/app/views/shared/_rating.html.slim
@@ -1,3 +1,2 @@
 .rating-block.col-8.mx-auto
-  = "👍 #{ voteable.rating } % | #{ voteable.all_votes } votes total"
-
+  = "👍 #{ voteable.rating[:useful] } | 👎 #{ voteable.rating[:useless] } "
