--- a/app/views/shared/_vote.html.slim
+++ b/app/views/shared/_vote.html.slim
@@ -3,12 +3,15 @@
     = current_user.status_vote(voteable) if !current_user.able_to_vote?(voteable) 
 
   .links-vote.d-grid.gap-1.col-8.mx-auto
-    =link_to "\u2705 useful", [voteable, vote_new(voteable), vote: {useful: true}], method: :post, remote: true, form: { data: :json }, data: { id: voteable.id },
+    =link_to "\u2705 useful", [voteable, vote_new(voteable), vote: {useful: true}], method: :post, 
+      remote: true, form: { data: :json }, data: { id: voteable.id },
       class: (current_user&.able_to_vote?(voteable) ? 'useful-link' : 'useful-link visually-hidden').concat(' btn btn-dark btn-sm')
-    =link_to "\u26D4 useless", [voteable, vote_new(voteable), vote: {useful: false}], method: :post, remote: true, form: { data: :json }, data: { id: voteable.id }, 
+    =link_to "\u26D4 useless", [voteable, vote_new(voteable), vote: {useful: false}], method: :post, 
+      remote: true, form: { data: :json }, data: { id: voteable.id },
       class: (current_user&.able_to_vote?(voteable) ? 'useless-link' : 'useless-link visually-hidden').concat(' btn btn-dark btn-sm')
 
-    =link_to "\u274C reset", current_user.load_vote(voteable), method: :delete, remote: true, data: {type: :json,  id: voteable.id }, 
+    =link_to "\u274C reset", current_user.load_vote(voteable), method: :delete, 
+      remote: true, data: {type: :json,  id: voteable.id },
       class: (current_user&.able_to_vote?(voteable) ? 'reset-link visually-hidden' : 'reset-link').concat(' btn btn-dark btn-sm')
 
 
