--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,4 +1,6 @@
 -@inner = @question
+.question-errors
+  = render 'shared/errors', resource: @question
 .question-block.hstack.gap-1 
   .conteniar-lg.col-md-10.mx-auto
     h1.fw-light.fst-italic Question
