fix: task9, edit tests

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -2,7 +2,7 @@
 span id="answer-block-#{answer.id}"
   span id="answer-errors-#{answer.id}"
   
-  .hstack.gap-2.border.border-info 
+  .hstack.gap-2.border.border-info.m-1 
     -if answer.selected
       .bg-success.conteniar-lg.col-md-10.mx-auto style="--bs-bg-opacity: .25"
         br= "Best answer"
