--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -20,15 +20,14 @@
 
 .container-xl.bg-secondary style="--bs-bg-opacity: .25"
   = form_with model: [@question, @answer], class: 'new-answer pb-2 mb-4', local: false do |f|
-    div.pt-1.mt-2
+    div.pt-1.mt-2.input-group.mb-3
       = f.label :body, 'Your answer', class: "form-label"
-      = f.text_area :body, rows: 6, cols: 120 
-
-    div.p-1.m-2
+      = f.text_area :body , class: "form-control"
+    div.p-1.m-2.input-group.mb-3
       = f.label :files, class: "form-label" 
       = f.file_field :files, multiple: true, class: "form-control form-control-sm m-2 answer-files"
 
-    div.links-add
+    div.links-add.input-group.mb-3
       =f.fields_for :links do |link| 
         =render 'shared/link_fields', f: link
     = link_to_add_association 'add link', f, :links, 
