--- a/app/views/shared/_link_fields.html.slim
+++ b/app/views/shared/_link_fields.html.slim
@@ -1,6 +1,7 @@
-.nested-fields
+.nested-fields.input-group.mb-3
   =f.label :name, 'Link name'
-  =f.text_field :name 
+  =f.text_field :name, class: "form-control" 
   =f.label :url
-  =f.text_field :url  
-  = link_to_remove_association "remove link", f, partial: 'shared/link_filelds'
+  =f.text_field :url, class: "form-control"  
+  = link_to_remove_association "remove link", f, 
+    partial: 'shared/link_filelds'
