--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,7 +1,7 @@
 -@inner = @question
 .question-errors
   = render 'shared/errors', resource: @question
-.question-block.hstack.gap-1 data-question-id = @question.id 
+.question-block.hstack.gap-1 data-question-id = @question.id id="question-#{@question.id}"
   .conteniar-lg.col-md-10.mx-auto
     h1.fw-light.fst-italic Question
     div.p-1.m-1.fw-bold = @question.title
